# mumla

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/goog/java/se/lublin/mumla/app/: StartupAction.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/se/lublin/mumla/: Settings.kt
app/src/main/java/se/lublin/mumla/app/: DialogUtils.kt  DrawerAdapter.kt  DrawerFragment.kt  IStartupAction.kt  MumlaActivity.kt  MumlaApplication.kt  MumlaMainLayout.kt  PushToTalkOverlayController.kt  ServerConnectTask.kt  ServerQrCodeFragment.kt  StartupAction.kt
app/src/main/java/se/lublin/mumla/channel/: AccessTokenFragment.kt  ChannelAdapter.kt  ChannelAudioMenu.kt  ChannelChatFragment.kt  ChannelDetailFragment.kt  ChannelEditFragment.kt  ChannelFragment.kt  ChannelLayout.kt  ChannelListAdapter.kt  ChannelListFragment.kt  ChannelListLayout.kt  ChannelMembersFragment.kt  ChannelMenu.kt  ChannelOverviewFragment.kt  ChannelSearchProvider.kt  ChatComposerEditText.kt  ChatKeyboardFrameLayout.kt  ChatMessageCellView.kt  ChatTargetActionModeCallback.kt  ChatTargetProvider.kt  DrawerHistoryFragments.kt  OnChannelClickListener.kt  OnUserClickListener.kt  PermissionsPopupMenu.kt  PrivateCallFragment.kt  ServerInfoFragment.kt  UserMenu.kt  UserProfileFragment.kt
app/src/main/java/se/lublin/mumla/db/: DatabaseCertificate.kt  DatabaseProvider.kt  MumlaDatabase.kt  MumlaSQLiteDatabase.kt
app/src/main/java/se/lublin/mumla/drawable/: CircleDrawable.kt
app/src/main/java/se/lublin/mumla/preference/: AboutSettingsFragment.kt  AppearanceSettingsFragment.kt  AudioSettingsFragment.kt  (+14 more)
app/src/main/res/drawable/: call_24px.xml  cancel_24px.xml  channel_contact_avatar_bg.xml  channel_tab_container_bg.xml  channel_tab_pill_selector.xml  chat_text_cursor.xml  conversation_24px.xml  database_24px.xml  drawer_header_tab_bg.xml  drawer_item_background.xml  drawer_item_background_checked_shape.xml  drawer_item_background_default_shape.xml  drawer_item_background_pressed_shape.xml  globe_24px.xml  group_24.xml  ic_launcher_foreground.xml  image_24.xml  info_24.xml  info_24px.xml  mic_24px.xml  note_stack_24.xml  outline_circle_deafened.xml  outline_circle_muted.xml  outline_circle_server_deafened.xml  outline_circle_server_muted.xml  outline_circle_suppressed.xml  outline_circle_talking_off.xml  outline_circle_talking_on.xml  outline_circle_talking_quiet.xml  phone_in_talk_24px.xml  radio_24px.xml  record_voice_over_24px.xml  server_contact_avatar_bg.xml  settings_24px.xml  user_contact_avatar_bg.xml  volume_up_24px.xml
app/src/main/res/drawable-anydpi-v24/: ic_action_add_dark.xml  ic_action_audio.xml  ic_action_audio_muted.xml  ic_action_audio_on.xml  ic_action_bad.xml  ic_action_channels.xml  ic_action_chat.xml  ic_action_collapsed.xml  ic_action_comment.xml  ic_action_delete_dark.xml  ic_action_delete_light.xml  ic_action_drag_handle.xml  ic_action_error.xml  ic_action_expanded.xml  ic_action_favourite_on.xml  ic_action_fullscreen.xml  ic_action_headphones.xml  ic_action_info_dark.xml  ic_action_microphone_dark.xml  ic_action_microphone_muted.xml  ic_action_move.xml  ic_action_save.xml  ic_action_search.xml  ic_action_send.xml  ic_action_settings.xml  ic_action_sort.xml  ic_action_user_dark.xml  ic_carriage_return.xml  ic_menu_moreoverflow_card_dark_pressed.xml  ic_more_vert_black_24dp.xml  ic_note_stack.xml  ic_server_light.xml  ic_stat_notify.xml
app/src/main/res/layout/: fragment_chat.xml  list_chat_item.xml  overlay_user_row.xml
app/src/main/res/menu/: channel_input_menu.xml  channel_menu.xml  context_channel.xml  context_user.xml  fragment_channel_list.xml  fragment_server_list.xml
app/src/main/res/values/: colors.xml  ids.xml  preference.xml  preference_notranslate.xml  strings.xml  strings_notranslate.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-kab/: preference.xml  strings.xml
app/src/main/res/values-lv/: strings.xml
app/src/main/res/values-nb-rNO/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: preference.xml  strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: preference.xml  strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: preference.xml  strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: preference.xml  strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: settings_audio.xml
libraries/: README.md
libraries/humla/: .gitignore  VENDORED_VERSION.txt  build.gradle
libraries/humla/libs/humla-spongycastle/: VENDORED_VERSION.txt  build.gradle
libraries/humla/libs/humla-spongycastle/mail/: build.gradle
libraries/humla/libs/humla-spongycastle/pg/: build.gradle
libraries/humla/src/main/cpp/: CMakeLists.txt  audio_input_jni.cpp  native_opus_encoder_jni.cpp  third_party_audio_pipeline.cpp  third_party_audio_pipeline.h
libraries/humla/src/main/jni/celt-0.11.0-src/: VENDORED_VERSION.txt
libraries/humla/src/main/jni/celt-0.7.0-src/: VENDORED_VERSION.txt
libraries/humla/src/main/jni/opus/: VENDORED_VERSION.txt
libraries/humla/src/main/jni/speex/: VENDORED_VERSION.txt
libraries/oboe/: VENDORED_VERSION.txt
libraries/rnnoise/: CMakeLists.txt  VENDORED_VERSION.txt
libraries/webrtc-apm/: CMakeLists.txt  VENDORED_VERSION.txt
(+95 files in other folders)
